tests/data/midterm/midterm/2018391/Q3/submission_1/.vocStudentGradingReport.txt

[Executed at: Sun Mar 18 23:55:24 PDT 2018]

Traceback (most recent call last):
  File "/home/ccc_v1_c79523__48809/asn24778_45/asn24779_1/asnlib/autograde.py", line 14, in <module>
    score=runtest.main()
  File "/home/ccc_v1_c79523__48809/asn24778_45/asn24779_1/asnlib/runtestcases.py", line 63, in main
    stu_work=getattr(__import__(work_package, fromlist=fun_name), f)
  File "./q3_work.py", line 13
    def get_volume(s1, s2, height):
      ^
SyntaxError: invalid syntax
Command exited with non-zero status 1
